--- a/robertoMonstruo/package.json
+++ b/robertoMonstruo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lista-de-tareas",
+  "name": "clase8",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
